[gd_scene load_steps=4 format=2]

[ext_resource path="res://Common/Res/UI/Themes/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Common/Instances/UI/RunEndMenu.gd" type="Script" id=2]
[ext_resource path="res://Common/Res/UI/Fonts/Swash_16.tres" type="DynamicFont" id=3]

[node name="RunEndMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Center"]
margin_left = 600.0
margin_top = 200.0
margin_right = 1000.0
margin_bottom = 700.0
rect_min_size = Vector2( 400, 500 )

[node name="DepthFlavor" type="Label" parent="Center/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.5
margin_top = 75.0
margin_right = 169.5
margin_bottom = 116.0
text = "You Made it to a depth of"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DepthText" type="Label" parent="Center/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.5
margin_top = 119.0
margin_right = 169.5
margin_bottom = 160.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="Center/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.5
margin_top = -36.5
margin_right = 145.5
margin_bottom = 36.5
custom_fonts/font = ExtResource( 3 )
align = 1
max_length = 20
placeholder_text = "Name for Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainBtn" type="Button" parent="Center/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.5
margin_top = 62.0
margin_right = 145.5
margin_bottom = 135.0
text = "Play Agian"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuBtn" type="Button" parent="Center/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.5
margin_top = 139.5
margin_right = 145.5
margin_bottom = 212.5
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Center/Panel/PlayAgainBtn" to="." method="_on_PlayAgainBtn_pressed"]
[connection signal="pressed" from="Center/Panel/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
